# consoleCPU

./: .gitignore  .gitmodules  Cargo.toml  Makefile.toml  README.md  console_cpu.code-workspace
bootloader/: Cargo.toml  Makefile.toml  README.md  build.rs
bootloader/.cargo/: config.toml
bootloader/src/: FreeRTOSConfig.h  main.rs
common/device/NUCLEO-H743ZI2/: Cargo.toml  openocd.cfg
common/device/NUCLEO-H743ZI2/src/: main.rs
common/sparkbox/: Cargo.toml
common/sparkbox/src/: device.rs  leds.rs  lib.rs  usb.rs
common/sparkbox_device/: Cargo.toml
common/sparkbox_device/src/: lib.rs  nucleo_h743zi2.rs
common/sparkbox_device/src/nucleo_h743zi2/: error.rs  mod.rs
nucleo_board_init/: Cargo.toml
src/: main.rs
src/.cargo/: config.toml
