[package]
name = "cpu_bootloader"
categories = ["embedded", "no-std"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m-rtic = "1.1.3"
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
stm32h7xx-hal = { version = "0.13.1", features = ["stm32h743", "rt"] }
systick-monotonic = "1.0.1"
sparkbox = {version = "0.1.0", path = "../common/sparkbox"}
sparkbox_device = {version = "0.1.0", path = "../common/sparkbox_device"}

# Allow us to use `cargo fix`
[[bin]]
name = "cpu_bootloader"
test = false
bench = false

[profile.dev]
opt-level = 1 # No optimizations for size
codegen-units = 16
debug = true
lto = false # Link time optimizations off

[profile.release]
opt-level = 's' # Max optimizations for size
codegen-units = 1
debug = true
lto = true # Link-time-optimizations on