[package]
name = "cpu_bootloader"
categories = ["embedded", "no-std"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.2"
freertos-rust = "0.1.2"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
stm32h7xx-hal = { version = "0.13.1", features = ["stm32h743", "rt"] }
sparkbox = { version = "*", path = "../common/sparkbox"}
sparkbox_device = { version = "*", path = "../common/sparkbox_device"}


[build-dependencies]
freertos-cargo-build = "0.1.1"

# Allow us to use `cargo fix`
[[bin]]
name = "cpu_bootloader"
test = false
bench = false

[profile.dev]
opt-level = 1 # No optimizations for size
codegen-units = 16
debug = true
lto = false # Link time optimizations off

[profile.release]
opt-level = 's' # Max optimizations for size
codegen-units = 1
debug = true
lto = true # Link-time-optimizations on