[package]
name = "sparkbox_device"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sparkbox = { version = "0.1.0", path = "../sparkbox" }
heapless = "0.7.16"
stm32h7 = "0.15.1"
stm32h7xx-hal = { version = "0.13.1", features = ["stm32h743", "rt"] }
